@@ -4,13 +4,34 @@ import java.io.InputStream;
 import java.net.URL;
 import java.security.ProtectionDomain;
 import java.util.Arrays;
+import java.util.List;
 
 public class AppClassLoader extends ClassLoader implements ClassLoaderBridge {
-    private final ClassConstantTransformer transformer = new ClassConstantTransformer(Arrays.asList(
-            // Replace OpenGL calls.
-            ClassConstantTransformer.newTransform("org/lwjgl/opengl/GL11", "com/genir/renderer/bridge/GL11"),
-            ClassConstantTransformer.newTransform("org/lwjgl/opengl/GL14", "com/genir/renderer/bridge/GL14")
-    ));
+    private final List<ClassConstantTransformer> lwjglTransformers = List.of(
+            new ClassConstantTransformer(Arrays.asList(
+                    // Replace OpenGL calls.
+                    ClassConstantTransformer.newTransform("org/lwjgl/opengl/GL11", "com/genir/renderer/bridge/GL11"),
+                    ClassConstantTransformer.newTransform("org/lwjgl/opengl/GL14", "com/genir/renderer/bridge/GL14")
+            ))
+    );
+
+    private final List<ClassConstantTransformer> starfarerTransformers = List.of(
+            new ClassConstantTransformer(Arrays.asList(
+                    // Replace OpenGL calls.
+                    ClassConstantTransformer.newTransform("org/lwjgl/opengl/GL11", "com/genir/renderer/bridge/GL11"),
+                    ClassConstantTransformer.newTransform("org/lwjgl/opengl/GL14", "com/genir/renderer/bridge/GL14"),
+                    ClassConstantTransformer.newTransform("org/lwjgl/opengl/Display", "com/genir/renderer/bridge/Display"),
+                    ClassConstantTransformer.newTransform("org/lwjgl/opengl/GLContext", "com/genir/renderer/bridge/GLContext"),
+                    ClassConstantTransformer.newTransform("org/lwjgl/util/Display", "com/genir/renderer/bridge/DisplayUtil"),
+
+                    // Replace class loader for loading scripts.
+                    ClassConstantTransformer.newTransform("java/net/URLClassLoader", "com/genir/renderer/loaders/URLClassLoader")
+            )),
+            new ClassConstantTransformer(List.of(
+                    // Replace OpenGL calls.
+                    ClassConstantTransformer.newTransform("com/genir/renderer/bridge/DisplayMode", "org/lwjgl/opengl/DisplayMode")
+            ))
+    );
 
     private final ClassTransformer classTransformer = new ClassTransformer(this);
 
@@ -32,26 +53,30 @@ public class AppClassLoader extends ClassLoader implements ClassLoaderBridge {
         return findClass(name);
     }
 
-    private boolean doNotIntercept(String name) {
-        return !name.startsWith("com.fs.") && !name.startsWith("org.lwjgl.util.") && !name.startsWith("com.genir.renderer.");
-    }
-
     @Override
     public InputStream getResourceAsStream(String name) {
-        if (name.startsWith("org.lwjgl.util")) {
-            return classTransformer.getResourceAsStream(name, transformer);
-        }
-
-        return classTransformer.getResourceAsStream(name, null);
+        List<ClassConstantTransformer> transformers = selectTransformer(name);
+        return classTransformer.getResourceAsStream(name, transformers);
     }
 
     @Override
     public Class<?> findClass(String name) throws ClassNotFoundException {
-        if (name.startsWith("org.lwjgl.util")) {
-            return classTransformer.findClass(name, transformer);
+        List<ClassConstantTransformer> transformers = selectTransformer(name);
+        return classTransformer.findClass(name, transformers);
+    }
+
+    private boolean doNotIntercept(String name) {
+        return !name.startsWith("com.fs.") && !name.startsWith("org.lwjgl.util.") && !name.startsWith("com.genir.renderer.");
+    }
+
+    private List<ClassConstantTransformer> selectTransformer(String name) {
+        if (name.startsWith("org.lwjgl.util.")) {
+            return lwjglTransformers;
+        } else if (name.startsWith("com.fs.")) {
+            return starfarerTransformers;
         }
 
-        return classTransformer.findClass(name, null);
+        return null;
     }
 
     @Override
@@ -68,4 +93,5 @@ public class AppClassLoader extends ClassLoader implements ClassLoaderBridge {
     public Class<?> superDefineClass(String name, byte[] b, int off, int len, ProtectionDomain protectionDomain) {
         return super.defineClass(name, b, off, len, protectionDomain);
     }
+
 }
